// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsMobileMenu - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex gap-3 w-full justify-between custom-menu"
>
  <button
    aria-current="page"
    aria-label="Account"
    class="border-b w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-100 border-white/100"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-user shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="12"
        cy="7"
        r="4"
      />
    </svg>
  </button>
  <button
    aria-label="Notifications"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-bell shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.268 21a2 2 0 0 0 3.464 0"
      />
      <path
        d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
      />
    </svg>
  </button>
  <button
    aria-label="Privacy & Safety"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-check shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="m9 12 2 2 4-4"
      />
    </svg>
  </button>
  <button
    aria-label="Muted Users"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume-x shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <line
        x1="22"
        x2="16"
        y1="9"
        y2="15"
      />
      <line
        x1="16"
        x2="22"
        y1="9"
        y2="15"
      />
    </svg>
  </button>
  <button
    aria-label="Language"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-languages shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 8 6 6"
      />
      <path
        d="m4 14 6-6 2-3"
      />
      <path
        d="M2 5h12"
      />
      <path
        d="M7 2h1"
      />
      <path
        d="m22 22-5-10-5 10"
      />
      <path
        d="M14 18h6"
      />
    </svg>
  </button>
  <button
    aria-label="Help"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-help shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
  </button>
</div>
`;

exports[`SettingsMobileMenu - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex gap-3 w-full justify-between"
>
  <button
    aria-current="page"
    aria-label="Account"
    class="border-b w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-100 border-white/100"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-user shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="12"
        cy="7"
        r="4"
      />
    </svg>
  </button>
  <button
    aria-label="Notifications"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-bell shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.268 21a2 2 0 0 0 3.464 0"
      />
      <path
        d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
      />
    </svg>
  </button>
  <button
    aria-label="Privacy & Safety"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shield-check shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
      />
      <path
        d="m9 12 2 2 4-4"
      />
    </svg>
  </button>
  <button
    aria-label="Muted Users"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume-x shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <line
        x1="22"
        x2="16"
        y1="9"
        y2="15"
      />
      <line
        x1="16"
        x2="22"
        y1="9"
        y2="15"
      />
    </svg>
  </button>
  <button
    aria-label="Language"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-languages shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 8 6 6"
      />
      <path
        d="m4 14 6-6 2-3"
      />
      <path
        d="M2 5h12"
      />
      <path
        d="M7 2h1"
      />
      <path
        d="m22 22-5-10-5 10"
      />
      <path
        d="M14 18h6"
      />
    </svg>
  </button>
  <button
    aria-label="Help"
    class="border-b border-white/20 w-full pb-3 justify-center items-center inline-flex transition-all hover:bg-white/10 hover:border-white/30 opacity-60"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-help shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
  </button>
</div>
`;
